--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ h6 {
      padding: 0 0 10px 0;
      font-weight: normal;
      line-height: normal;
-     color: #111111;
+     /* color: #111111; */
      margin: 0
 }
 
@@ -593,7 +593,7 @@ button {
 
 .balance {
      background: #001935;
-     margin: 0 60px 0 60px;
+     /* margin: 0 60px 0 60px; */
 }
 
 .balance .titlepage {
@@ -982,15 +982,16 @@ button {
      font-weight: 600;
      font-size: 20px;
      line-height: 24px;
-     text-align: left;
+     /* text-align: left; */
      color: #000000;
      margin-bottom: 15px;
-     display: table;
+     /* display: table; */
+     text-align: center;
 }
 
 ul.conta li {
      color: #000000;
-     text-align: left;
+     /* text-align: left; */
      padding-bottom: 20px;
      font-size: 16px;
 }
@@ -1007,7 +1008,7 @@ ul.conta li a {
 
 ul.link_menu li {
      display: block;
-     text-align: left;
+     /* text-align: left; */
 }
 
 ul.link_menu li.active a {
@@ -1030,8 +1031,8 @@ ul.social_icon {
      margin-left: 15px;
      padding-top: 15px;
      width: 100%;
-     float: left;
-     text-align: left;
+     /* float: left; */
+     /* text-align: left; */
 }
 
 ul.social_icon li {
@@ -1068,7 +1069,7 @@ ul.social_icon li a:hover {
      font-size: 17px;
      line-height: 32px;
      font-weight: normal;
-     text-align: left;
+     /* text-align: left; */
 }
 
 .copyright p {
