--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,19 @@
-
-
+.nav-item a:hover{
+     background-color: rgb(4, 102, 48); 
+     border: #000 1px ;
+     border-radius: 10px;
+     color: white;
+   }
+.nav-item{
+     font-size: 17px
+}
+.navbar-collaps a{
+     margin: 40px
+}
+.navbar{
+     margin: 10px;
+     background-color: white;
+}
 /*--------------------------------------------------------------------- File Name: style.css ---------------------------------------------------------------------*/
 
 
