color for hover

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .nav-item a:hover{
-     background-color: rgb(4, 102, 48); 
+     background-color: #6DB23F; 
      border: #000 1px ;
      border-radius: 10px;
      color: white;
