--- a/css/styless.css
+++ b/css/styless.css
@@ -1,6 +1,10 @@
 
-
-
+body{
+  text-decoration: none;
+}
+p{
+  font-size: 17px !important;
+}
 .far-away{
     display: grid;
     grid-template-columns: repeat(3,1fr);
