--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,9 @@
 @import url(nice-select.css);
 
 /*--------------------------------------------------------------------- skeleton ---------------------------------------------------------------------*/
-
+.conta a{
+     text-align: left;
+   }
 * {
      box-sizing: border-box !important;
      
